# web_scrapper_helper

./: .gitignore  Cargo.toml  LICENSE.txt
src/: lib.rs  schema.rs
